--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,18 @@ group = 'com.study'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+
     implementation 'junit:junit:4.12'
     compile('mysql:mysql-connector-java')
     compile 'org.projectlombok:lombok:1.18.16'
